--- a/ML1_GroupWork_RM_LR_AC.Rmd
+++ b/ML1_GroupWork_RM_LR_AC.Rmd
@@ -15,7 +15,8 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r cars}
-summary(cars)
+# DATA LOAD
+motor_data14_2018 <- read_csv("data/motor_data14-2018.csv")
 ```
 
 ## Including Plots
