--- a/ML1_GroupWork_RM_LR_AC.Rmd
+++ b/ML1_GroupWork_RM_LR_AC.Rmd
@@ -8,13 +8,9 @@ date: "2024-01-10"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
+# Setup
+```{r cars cache=TRUE}
 
 #Install and import libraries.
 if (!require("quantmod")) install.packages("quantmod")
@@ -56,17 +52,55 @@ library(wordcloud)
 library(tidytext)
 
 
-#DATA LOAD
-#Ohne die Spaltentyp-Meldungen anzuzeigen
+# DATA LOAD
+# without column-types shown
 motor_data14_2018 <- read_csv("data/motor_data14-2018.csv", show_col_types = FALSE)
 ```
 
-## Including Plots
+# Models
+## Linear Model
+```{r Linear-Model}
+# TODO
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+## Poisson
+```{r Poisson-Model}
+# TODO
+
+```
+
+
+## Binomial
+```{r Binomial-Model}
+# TODO
+
+```
+
+## Generalised Additive Model (GAM)
+```{r GAM}
+# TODO
+
+```
+
+## Neural Network
+```{r Neural-Network}
+# TODO
+
+```
+
+
+## Support Vector Machine (SVM)
+```{r SVM}
+# TODO
+
+```
+
+
+# Conclusion
+
+
+
+
+
